k8s/services/account-service.yaml
# k8s/services/account-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  namespace: lovable-core
  labels:
    app: account-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
        - name: account-service
          image: 164429444725.dkr.ecr.ap-south-1.amazonaws.com/distributed-lovable/account-service:v3
          imagePullPolicy: Always
          ports:
            - containerPort: 8080      
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 120   
            periodSeconds: 15
            timeoutSeconds: 5         
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            failureThreshold: 30 # 30 * 10s = 300s max startup time
            periodSeconds: 10
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: lovable-core
  labels:
    app: account-service
spec:
  selector:
    app: account-service
  ports:
    - port: 8080
      name: http
      targetPort: 8080
