k8s/services/config-service.yaml
# k8s/services/config-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-service
  namespace: lovable-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-service
  template:
    metadata:
      labels:
        app: config-service
    spec:
      containers:
        - name: config-service
          image: 164429444725.dkr.ecr.ap-south-1.amazonaws.com/distributed-lovable/config-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
          resources:
            requests:
              cpu: 100m
              memory: 192Mi
            limits:
              cpu: 250m
              memory: 384Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 90
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            failureThreshold: 30
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 120
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: config-service
  namespace: lovable-core
spec:
  selector:
    app: config-service
  ports:
    - port: 8888
      targetPort: 8888
