k8s/services/discovery-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-service
  namespace: lovable-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-service
  template:
    metadata:
      labels:
        app: discovery-service
    spec:
      containers:
        - name: discovery-service
          image: 164429444725.dkr.ecr.ap-south-1.amazonaws.com/distributed-lovable/discovery-service:v1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8761
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-service
  namespace: lovable-core
spec:
  selector:
    app: discovery-service
  ports:
    - name: http
      port: 8761
      targetPort: 8761
  type: ClusterIP
