k8s/services/workspace-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspace-service
  namespace: lovable-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workspace-service
  template:
    metadata:
      labels:
        app: workspace-service
    spec:
      serviceAccountName: workspace-service-account
      containers:
        - name: workspace-service
          image: 164429444725.dkr.ecr.ap-south-1.amazonaws.com/distributed-lovable/workspace-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 9020
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /workspace/actuator/health
              port: 9020
            initialDelaySeconds: 90
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /workspace/actuator/health
              port: 9020
            failureThreshold: 30
            periodSeconds: 10
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: workspace-service
  namespace: lovable-core
spec:
  selector:
    app: workspace-service
  ports:
    - port: 80
      targetPort: 9020
